--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,13 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rockastorm/internetprogrammingproject1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rockastorm/internetprogrammingproject1/issues"
+  },
+  "homepage": "https://github.com/Rockastorm/internetprogrammingproject1#readme"
 }
